# api/nimoos/openapi.yaml
@@ -91,106 +91,6 @@ paths:
         "500":
           $ref: "#/components/responses/ResponseInternalServerError"
   
-  /file/upload:
-    get:
-      tags:
-        - File
-      summary: Check upload chunk
-      parameters:
-        - name: path
-          in: query
-          description: File path
-          required: true
-          example: "/DATA/test.log"
-          schema:
-            type: string
-        - name: relativePath
-          in: query
-          description: File path
-          required: true
-          example: "/DATA/test.log"
-          schema:
-            type: string
-        - name: filename
-          in: query
-          description: File name
-          required: true
-          example: "test.log"
-          schema:
-            type: string
-        - name: chunkNumber
-          in: query
-          description: chunk number
-          required: true
-          example: 1
-          schema:
-            type: string
-        - name: totalChunks
-          in: query
-          description: total chunks
-          example: 2
-          required: true
-          schema:
-            type: integer
-      description: Check if the file block has been uploaded (needs to be modified later)
-      operationId: checkUploadChunk
-      responses:
-        "200":
-          $ref: "#/components/responses/ResponseStringOK"
-        "400":
-          $ref: "#/components/responses/ResponseClientError"
-        "500":
-          $ref: "#/components/responses/ResponseInternalServerError"
-    post:
-      tags:
-        - File
-      summary: Upload file
-      description: Upload file
-      operationId: postUploadFile
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                relativePath:
-                  type: string
-                  example: "/DATA/test.log"
-                filename:
-                  type: string
-                  example: "/DATA/test2.log"
-                totalChunks:
-                  type: string
-                  example: "2"
-                chunkNumber:
-                  type: string
-                  example: "20"
-                path:
-                  type: string
-                  example: "/DATA"
-                file:
-                  type: string
-                  format: binary
-                chunkSize:
-                  type: string
-                  example: "1024"
-                currentChunkSize:
-                  type: string
-                  example: "1024"
-                totalSize:
-                  type: string
-                  example: "1024"
-                identifier:
-                  type: string
-                  example: "test.log"
-      responses:
-        "200":
-          $ref: "#/components/responses/ResponseStringOK"
-        "400":
-          $ref: "#/components/responses/ResponseClientError"
-        "500":
-          $ref: "#/components/responses/ResponseInternalServerError"
-  
   /zt/info:
     get:
       tags:
